--- a/css.css
+++ b/css.css
@@ -196,7 +196,7 @@ background-color: tomato;
     width: 100%;
     height: 3px;
     margin-top: 3px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     display: block;
     clip-path: var(--clippy);
 }
