--- a/css.css
+++ b/css.css
@@ -177,7 +177,7 @@ background-color: tomato;
  }
 
  .nav__item{
-    color: #45f454; 
+    color: #457349; 
     font-weight: 900;
     text-decoration: none;
  --clippy:polygon(0 0, 0 0, 0 100%, 0% 100%)
